# agentsentry

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  extensions.py
backend/app/agent/: chat.py  tools.py
backend/app/models/: __init__.py  agent.py  user.py
backend/app/routes/: __init__.py  agents.py  analytics.py  auth.py  chat.py  entries.py  main.py  projects.py  sessions.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_user_table.py  002_add_agent_project_entry_tables.py  003_add_classified_offset_to_entry.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatWidget.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Agents.tsx  Analytics.tsx  Dashboard.tsx  Entries.tsx  Login.tsx  Projects.tsx  Register.tsx
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/hooks/scripts/: configure.sh  session-end.sh  session-start.sh  stop.sh
plugin/skills/agentsentry/: SKILL.md
